
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4201: Native e2e tests fail when run against old version of pig (rohini)

PIG-4197: Fix typo in Job Stats header: MinMapTIme => MinMapTime (jmartell7 via daijy)

PIG-4194: ReadToEndLoader does not call setConf on pigSplit in initializeReader (shadanan via rohini)

PIG-4187: Fix Orc e2e tests (daijy)

PIG-4177: BigData_1 fail after PIG-4149 (daijy)

PIG-3507: Pig fails to run in local mode on a Kerberos enabled Hadoop cluster (kellyzly via rohini)

PIG-4171: Streaming UDF fails when direct fetch optimization is enabled (cheolsoo)

PIG-4170: Multiquery with different type of key gives wrong result (daijy)

PIG-4104: Accumulator UDF throws OOM in Tez (rohini)

PIG-4169: NPE in ConstantCalculator (cheolsoo)

PIG-4161: check for latest Hive snapshot dependencies (daijy)

PIG-4102: Adding e2e tests and several improvements for Orc predicate pushdown (daijy)

PIG-4156: [PATCH] fix NPE when running scripts stored on hdfs:// (acoliver via daijy)

PIG-4159: TestGroupConstParallelTez and TestJobSubmissionTez should be excluded in Hadoop 20 unit tests (cheolsoo)

PIG-4154: ScriptState#setScript(File) does not close resources (lars_francke via daijy)

PIG-4155: Quitting grunt shell using CTRL-D character throws exception (abhishek.agarwal via daijy)

PIG-4157: Pig compilation failure due to HIVE-7208 (daijy)

PIG-4158: TestAssert is broken in trunk (cheolsoo)

PIG-4143: Port more mini cluster tests to Tez - part 7 (daijy)

PIG-4149: Rounding issue in FindQuantiles (daijy)

PIG-4145: Port local mode tests to Tez - part1 (daijy)

PIG-4076: Fix pom file (daijy)
